# checkdef

./: .gitignore  README.md  check_runner.py  devshell.nix  flake.nix  pyproject.toml  pytest.ini  ttylog.txt
lib/: checks.nix
nix/: devshell.nix
nix/lib/: checkdef.nix  ci-analysis.nix  deadnix.nix  deadnix.nix.template  default.nix  fawltydeps.nix  nixpkgs-fmt.nix  patterns.nix  pdoc.nix  pyright.nix  pytest-cached.nix  pytest-env-builder.nix  pytest-filtered.nix  pytest-integration.nix  ruff-check.nix  ruff-format.nix  statix.nix  trim-whitespace.nix  utils.nix
tests/: README.md  __init__.py  test_cache_behavior.py
tests/docker/: Dockerfile
