[project]
name = "checks-framework"
version = "0.1.0"
description = "Universal development checks framework with rich output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
